style.css
@import url('https://fonts.googleapis.com/css2?family=Signika:wght@400;600&display=swap');

:root {
  --primary: #B84240;
  --secondary: #A01127;
  --dark: #090609;
  --light: #F3F3F3;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: 'Signika', sans-serif;
  width: 100%;
  min-height: 100vh;
  overflow: hidden;
}

.card {
  margin: 100px auto 0;
  width: 400px;
  height: 550px;
  perspective: 1000px;
}

.card__inner {
  width: 100%;
  height: 100%;
  transition: transform 1s;
  transform-style: preserve-3d;
  cursor: pointer;
  position: relative;
}

.card__inner.is-flipped {
  transform: rotateY(180deg);
}

.card__face {
  position: absolute;
  width: 100%;
  height: 100%;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  overflow: hidden;
  border-radius: 16px;
  box-shadow: 0px 3px 18px 3px rgba(0,0,0,0.2);
  align-items: center;
}

.card__face--front {
  border: 10px solid var(--secondary);
  background-color: var(--primary);
  display: flex;
  align-items: center;
  justify-content: center;
}

.card__face--front h2{
  color: #FFF;
  font-size: 32px;
}

.card__face--back {
  border: 10px solid var(--secondary);
  background-color: var(--light);
  transform: rotateY(180deg);
  align-items: center;
}

.card__content {
  width: 100%;
  height: 100%;
  background-color: var(--primary);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
  text-align: center;
}

.card-img {
  display: block;
  width: 75%;
  height: 75%;
  margin: 0 auto;
  object-fit: contain;
}

.code-img {
  display: block;
  width: 70%;
  margin: 0 auto;
  object-fit: contain;
}

.logo {
  width: 65%;
}

.album-container {
  width: 90%;
  height: 80%;
}

.album-infos {
  margin-top: 30px;
  height: 70%;
}

.player-container {
  width: 100%;
  height: 30%;
  display: flex;
  flex-direction: column;
  padding: 0 50px;
  color: #F3F3F3;
  padding-bottom: 40px;
}

.first-row-player {
  height: 50%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-bottom: 10px;
}

.music-info {
  display: flex;
  flex-direction: column;
  text-align: left;
}

.track-name {
  font-size: 20px;
}

.heart {
  height: 40%;
}

.progress-bar{
  height: 80%;
}

.playbar {
  height: 85%;
}

